--- a/package.json
+++ b/package.json
@@ -11,17 +11,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "amqplib": "^0.10.3",
-    "config": "^3.3.9",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "expo-server-sdk": "^3.7.0",
     "express": "^4.18.2",
-    "express-validator": "^7.0.1",
     "mongoose": "^7.5.3",
     "mqtt": "^5.1.3"
   },
   "devDependencies": {
-    "concurrently": "^8.2.1",
     "nodemon": "^3.0.1"
   }
 }
