--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,14 @@
 {
-    "version": 2,
-    "builds": [
+  "builds": [
       {
-        "src": "server.js",
-        "use": "@now/node"
+          "src": "server.js",
+          "use": "@vercel/node"
       }
-    ],
-    "routes": [
-        {
+  ],
+  "routes": [
+      {
           "src": "/(.*)",
-          "dest": "server.js"
-        }
-      ]
-  }
+          "dest": "index.js"
+      }
+  ]
+}
