--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,3 @@
 {
-  "builds": [
-      {
-          "src": "server.js",
-          "use": "@vercel/node"
-      }
-  ],
-  "routes": [
-      {
-          "src": "/(.*)",
-          "dest": "index.js"
-      }
-  ]
+  "rewrites": [{ "source": "/(.*)", "destination": "/api" }]
 }
