Revert "express deploy attempt 4"
This reverts commit c20914837e7b9569694e0f7076eef70bce58c38a.

--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "jest",
     "start": "node server.js",
-    "server": "nodemon server",
-    "vercel-build": "echo hello"
+    "server": "nodemon server"
   },
   "author": "",
   "license": "ISC",
